Fixes #127 Support for Java 17